# darkofit

./: .gitattributes  .gitignore  AGENTS.md  BEAT_CHIMERABOOST_PLAN.md  BENCHMARK_NOTES.md  BEST_OF_BOTH_PLAN.md  BEYOND_PARITY_PLAN.md  CHANGELOG.md  COUNTERPUNCH_PLAN.md  DISTRIBUTIONAL_HEADS_SPEC.md  DISTRIBUTIONAL_REGRESSION_SPEC.md  HANDOFF.md  KALMAN_READINESS_PLAN.md  LINEAR_RESIDUAL_BOOSTING_PLAN.md  NEXT_STEPS.md  NOTICE  PRODUCT_OFFENSE_PLAN.md  R2_PLAN.md  R3_PLAN.md  README.md  ROADMAP.md  SHIP_RULES.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
benchmarks/: FABLE_FEEDBACK_CLOSEOUT.md  FINDINGS.md  PANEL3_CONSOLIDATION_DECISION.md  README.md  SHIPPING_POLICY.md  TESTING_LOG.md  __init__.py  ab_compare.py  accuracy_v2_ablation.md  accuracy_v2_ablation_raw_20260723.json  accuracy_v2_ablation_result_20260723.md  amend_fresh_confirmation_registry_v2.py  analyze_automatic_linear_selector_v2_guardrail_replay.py  analyze_automatic_linear_selector_v3_ctr23_ship_check.py  analyze_barchive_v1.py  analyze_barchive_v2.py  analyze_basketball_cold_player_guardrail.py  analyze_basketball_native_ordinal.py  analyze_basketball_sports_panel.py  analyze_basketball_sports_panel_v2.py  analyze_ctr23_minimal_confirmation.py  analyze_ensemble_archive_components.py  analyze_ensemble_v3_characterization.py  analyze_grinsztajn_snr.py  analyze_m3a_wave1.py  analyze_m3b_ensemble_v3.py  analyze_m3b_ensemble_v3_r2.py  analyze_m3b_ensemble_v3_r3.py  analyze_m3b_ensemble_v3_r3_vs_single.py  analyze_native_ordinal_c2.py  analyze_panel3_confirmation.py  analyze_panel3_cross_power_calibration.py  analyze_smooth_cross_margin.py  analyze_synthgen_darkofit_ledger.py  analyze_t5_composite_confirmation.py  analyze_t7_catboost_attribution.py  analyze_t7b_automatic_depth_ctr23_ship_check_v1.py  analyze_t7b_automatic_depth_development_v1.py  analyze_t7b_automatic_depth_fresh_tier_d.py  analyze_t7b_automatic_depth_fresh_tier_d_v3.py  (+1058 more)
chimeraboost/: __init__.py  _validation.py  auto_params.py  binning.py  booster.py  flat_model.py  linear_residual.py  losses.py  preprocessing.py  serialization.py  sklearn_api.py  target_encoding.py  tree.py
darkofit/: __init__.py  _numba_runtime.py  _validation.py  auto_params.py  binning.py  booster.py  callbacks.py  flat_model.py  linear_residual.py  losses.py  preprocessing.py  serialization.py  shap.py  sklearn_api.py  target_encoding.py  tree.py  warmup.py
docs/: PROJECT_STATUS.md  api.md  bbstats-v2-patch-audit.md  benchmarks.md  best-of-both-worlds.md  concepts.md  development.md  faq.md  getting-started.md  index.md  measurements.md  parameters.md  recipes.md  shap.md  tabarena_tree_model_dossier.md  uncertainty.md
examples/: quickstart.py
tests/: conftest.py  golden_predictions.json  golden_synthgen.json  golden_synthgen_recipes.json  test_accuracy_v2_ablation.py  test_analysis_comparison.py  test_automatic_linear_selector_v2.py  test_automatic_linear_selector_v2_guardrail_replay.py  test_automatic_linear_selector_v2_m6_engagement.py  test_automatic_linear_selector_v2_protein_attribution.py  test_automatic_linear_selector_v2_protein_attribution_attempt2.py  test_automatic_linear_selector_v2_terminal_close.py  test_automatic_linear_selector_v3_ctr23_ship_check.py  test_automatic_linear_selector_v3_protein.py  test_automatic_linear_selector_v3_sports_2020_ship_check.py  test_b3_parallel_ensemble_candidate.py  test_b3_parallel_ensemble_contract.py  test_b3_parallel_ensemble_harness.py  test_b3_parallel_ensemble_v2.py  test_barchive_v1.py  test_barchive_v2.py  test_barchive_v2_erratum.py  test_basketball_auto_lr_refit.py  test_basketball_campaign_harness.py  test_basketball_categorical_combinations.py  test_basketball_chimera_v015.py  test_basketball_creator_benchmark.py  test_basketball_darkofit_ablation.py  test_basketball_guardrails.py  (+168 more)
(+41 files in other folders)
