[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chimeraboost"
dynamic = ["version"]
description = "CatBoost-inspired gradient boosting in pure Python with a numba backend"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "numba>=0.57",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/kmedved/chimeraboost"
Repository = "https://github.com/kmedved/chimeraboost"
Issues = "https://github.com/kmedved/chimeraboost/issues"

[project.optional-dependencies]
dev = ["pytest", "optuna>=4", "pandas"]
tuning = ["optuna>=4"]

[tool.setuptools.packages.find]
include = ["chimeraboost*"]

[tool.setuptools.dynamic]
version = {attr = "chimeraboost.__version__"}
