[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "darkofit"
dynamic = ["version"]
description = "Fast, flexible machine learning for tabular data with a Numba backend"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "numba>=0.57",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/kmedved/darkofit"
Repository = "https://github.com/kmedved/darkofit"
Issues = "https://github.com/kmedved/darkofit/issues"

[project.optional-dependencies]
dev = ["pytest", "optuna>=4", "pandas"]
tuning = ["optuna>=4"]
docs = ["mkdocs>=1.6"]

[tool.setuptools.packages.find]
include = ["darkofit*"]

[tool.setuptools.dynamic]
version = {attr = "darkofit.__version__"}

[tool.pytest.ini_options]
markers = [
    "campaign: frozen benchmark, evidence, and campaign-harness verifiers",
]
